inline/tests/spec/snapshots/parser/bold/ambiguous-end.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'ambiguous-end' from 'markup\\bold.yml'"
---
Plain @ (1:1)->(1:10) (
    The next 
    ^^^^^^^^^
)
Bold @ (1:10)->(1:18) (
    Plain @ (1:12)->(1:16) (
        word
        ^^^^
    )
)
Plain @ (1:18)->(1:28) (
    * is bold.
    ^^^^^^^^^^
)

---
With input:

The next **word*** is bold.


