inline/tests/spec/snapshots/parser/bold/implicit-closed-bold.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'implicit-closed-bold' from 'markup\\bold.yml'"
---
Bold @ (1:1)->(1:24) (
    Plain @ (1:3)->(1:24) (
        implicit bold **close
        ^^^^^^^^^^^^^^^^^^^^^
    )
)

---
With input:

**implicit bold **close


