inline/tests/spec/snapshots/parser/bold/not-bold.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-bold' from: 'bold.yml'"
---
Plain @ (1:1)->(1:15) (
    ** not bold **
)

---
With input:

** not bold **


