inline/tests/spec/snapshots/parser/bold/not-closed-bold.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-closed-bold' from 'bold.yml'"
---
Plain @ (1:1)->(1:14) (
    **not bold **
    ^^^^^^^^^^^^^
)

---
With input:

**not bold **


