inline/tests/spec/snapshots/parser/bold/not-opened-bold.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-opened-bold' from: 'bold.yml'"
---
Plain @ (1:1)->(1:14) (
    ** not bold**
)

---
With input:

** not bold**


