inline/tests/spec/snapshots/parser/bold/simple-bold.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'simple-bold' from 'bold.yml'"
---
Bold @ (1:1)->(1:9) (
    Plain @ (1:3)->(1:7) (
        Bold
        ^^^^
    )
)

---
With input:

**Bold**


